Wrong bluetooth PSM detected when parse the L2CAP packet
This issue was migrated from bug 6619 in our old bug tracker.
Original bug information:
Reporter: Howell ZHU
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.6.4
Attachments:
wrong_PSM_when_parsing_l2cap.cap: cap file for the wrong PSM detected
: decoding screen snapshot
0001-Fix-L2CAP-reusing-CIDs.patch: Fix L2CAP reusing CIDs
0002-fix-l2cap-reused-cids.diff: Fix L2CAP reused CIDs v2