From Michal Labedzki:

Fix:Wrong bluetooth PSM detected when parse the L2CAP packet.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6619

svn path=/trunk/; revision=40749